--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Just insert your token in the token section and [your personal useragent](https://dev.whatismymmr.com/#rules) in the useragent section and that's it
+Just insert your token in the token section and your personal useragent in the useragent section and that's it
 Search powered by whatismymmr.com api
